confirmation page html sendfile

--- a/backend/src/authentication/emails/confirmationPage/confirmationPageErro.html
+++ b/backend/src/authentication/emails/confirmationPage/confirmationPageErro.html
@@ -12,7 +12,7 @@
 
   <div class="container">
     <div>
-      <img src="systock_logo.png" alt="SYStock">
+      <!--<img src="systock_logo.png" alt="SYStock">-->
     </div>
     <div class="jumbotron">
       <h1>Erro ao confirmar Email, tente novamente mais tarde</h1>
